--- a/app/views/users/shared/_form_content.html.erb
+++ b/app/views/users/shared/_form_content.html.erb
@@ -1,4 +1,4 @@
-<div class="sm:mx-auto sm:w-full sm:max-w-md">
+<div class="sm:mx-auto sm:w-full sm:max-w-md text-center">
     <%= render "shared/title/purple" %>
     <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-gray-900"><%= yield :form_title %></h2>
 </div>
