--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,31 +4,36 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= f.label :email, class: "label" %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input" %>
     </div>
 
     <div class="field">
-      <%= f.label :time_zone %><br />
-      <%= f.time_zone_select(:time_zone) %>
+      <%= f.label :time_zone, class: "label" %>
+      <div class="relative">
+        <%= f.time_zone_select(:time_zone, nil, {}, { class: "input" })  %>
+        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+          <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+        </div>
+      </div>
     </div>
 
     <div class="field">
-      <%= f.label :telephone %><br />
-      <%= f.telephone_field :telephone %>
+      <%= f.label :telephone, class: "label"%>
+      <%= f.telephone_field :telephone, class: "input" %>
     </div>   
 
     <div class="field">
-      <%= f.label :password %>
+      <%= f.label :password, class: "label" %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <%= f.password_field :password, autocomplete: "new-password", class: "input" %>
     </div>
 
     <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.label :password_confirmation, class: "label" %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input" %>
     </div>
 
     <div class="actions">
