--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -3,18 +3,8 @@
     <%= render "shared/head/head" %>
     <body class="antialiased font-sans bg-gray-200">
         <div class="" style="">
-            <div class="relative bg-white overflow-hidden">
-                <div class="hidden lg:block lg:absolute lg:inset-0">
-                    <svg class="absolute top-0 left-1/2 transform translate-x-64 -translate-y-8" width="640" height="784" fill="none" viewBox="0 0 640 784">
-                        <defs>
-                            <pattern id="9ebea6f4-a1f5-4d96-8c4e-4c2abf658047" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"></rect>
-                            </pattern>
-                        </defs>
-                        <rect y="72" width="640" height="640" class="text-gray-50" fill="currentColor"></rect>
-                        <rect x="118" width="404" height="784" fill="url(#9ebea6f4-a1f5-4d96-8c4e-4c2abf658047)"></rect>
-                    </svg>
-                </div>
+            <div class="relative bg-black overflow-hidden">
+                <%= render partial: "shared/hero/shapes" %>
                 <div x-data="{ open: false }" class="relative pt-6 pb-16 md:pb-20 lg:pb-24 xl:pb-32">
                     <%= render "shared/hero/navigation.html.erb"%>
                     <%= render "shared/hero/mobile_navigation.html.erb"%>
