--- a/app/views/shared/hero/_mobile_navigation.html.erb
+++ b/app/views/shared/hero/_mobile_navigation.html.erb
@@ -10,10 +10,10 @@
     class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden"
     style="display: none;"
 >
-    <div class="rounded-lg shadow-md">
-        <div class="rounded-lg bg-white shadow-xs overflow-hidden" role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
+    <div>
+        <div class="bg-black overflow-hidden" role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
             <div class="px-5 pt-4 flex items-center justify-between">
-                <%= render "shared/title/purple" %>
+                <%= render "shared/title/white" %>
                 <div class="-mr-2">
                     <button
                         @click="open = false"
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div>
-                <%= link_to "Log In", new_user_session_path, class: "block w-full px-5 py-3 text-center font-medium text-indigo-600 bg-gray-50 hover:bg-gray-100 hover:text-indigo-700 focus:outline-none focus:bg-gray-100
-                focus:text-indigo-700 transition duration-150 ease-in-out", role: :menuitem %>
+                <%= link_to "Log In", new_user_session_path, class: "block w-full px-5 py-3 text-center font-medium text-blue-600 bg-gray-50 hover:bg-gray-100 hover:text-blue-700 focus:outline-none focus:bg-gray-100
+                focus:text-blue-700 transition duration-150 ease-in-out", role: :menuitem %>
             </div>
         </div>
     </div>
