--- a/app/views/shared/hero/_navigation.html.erb
+++ b/app/views/shared/hero/_navigation.html.erb
@@ -1,12 +1,12 @@
 <nav class="relative max-w-screen-xl mx-auto flex items-center justify-between px-4 sm:px-6">
     <div class="flex items-center flex-1">
         <div class="flex items-center justify-between w-full md:w-auto">
-            <%= render "shared/title/purple" %>
+            <%= render "shared/title/white" %>
             <div class="-mr-2 flex items-center md:hidden">
                 <button
                     @click="open = true"
                     type="button"
-                    class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
+                    class="inline-flex items-center justify-center p-2 text-white hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
                     id="main-menu"
                     aria-label="Main menu"
                     aria-haspopup="true"
@@ -20,10 +20,9 @@
         </div>
     </div>
     <div class="hidden md:block text-right">
-        <span class="inline-flex rounded-md shadow-md">
-            <span class="inline-flex rounded-md shadow-xs">
-                <%= link_to "Log In", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium rounded-md text-indigo-600 bg-white hover:bg-gray-50
-                focus:outline-none focus:border-indigo-300 focus:shadow-outline-indigo transition duration-150 ease-in-out"%>
+        <span class="inline-flex">
+            <span class="inline-flex">
+                <%= link_to "Log In", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-base leading-6 font-medium text-blue-600 bg-white hover:bg-gray-50 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue transition duration-150 ease-in-out"%>
             </span>
         </span>
     </div>
