--- a/app/views/shared/hero/_video.html.erb
+++ b/app/views/shared/hero/_video.html.erb
@@ -1,14 +1,13 @@
-<div class="mt-12 relative sm:max-w-lg sm:mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-span-6 lg:flex lg:items-center">
+<div class="mt-12 relative sm:max-w-lg sm:mx-auto lg:mt-0 lg:max-w-none lg:mx-0 lg:col-span-6 lg:flex lg:items-center lg:justify-end">
     <svg class="absolute top-0 left-1/2 transform -translate-x-1/2 -translate-y-8 scale-75 origin-top sm:scale-100 lg:hidden" width="640" height="784" fill="none" viewBox="0 0 640 784">
         <defs>
             <pattern id="4f4f415c-a0e9-44c2-9601-6ded5a34a13e" x="118" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
-                <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"></rect>
+                <rect x="0" y="0" width="4" height="4" class="text-gray-900" fill="currentColor"></rect>
             </pattern>
-        </defs>f
-        <rect y="72" width="640" height="640" class="text-gray-50" fill="currentColor"></rect>
+        </defs>
         <rect x="118" width="404" height="784" fill="url(#4f4f415c-a0e9-44c2-9601-6ded5a34a13e)"></rect>
     </svg>
-    <div class="relative mx-auto w-full lg:max-w-md">
+    <div class="relative w-full lg:max-w-md">
         <button type="button" class="relative block w-full overflow-hidden focus:outline-none focus:shadow-outline">
             <img class="w-full" src="https://images.unsplash.com/photo-1556740758-90de374c12ad?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1350&amp;q=80" alt="Woman making a sale" />
             <div class="absolute inset-0 w-full h-full flex items-center justify-center">
