--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <%= render "shared/head/head" %>
-    <body class="antialiased font-sans bg-gray-200"> 
-        <div class="min-h-screen bg-gray-50 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
+    <body class="antialiased font-sans bg-blue-500"> 
+        <div class="min-h-screen bg-blue-500 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
             <%= yield %>
-            <%= render "shared/misc/debug" if Rails.env == 'development' %>
         </div>
     </body>
 </html>
