--- a/app/views/users/shared/_form_content.html.erb
+++ b/app/views/users/shared/_form_content.html.erb
@@ -1,5 +1,7 @@
 <div class="sm:mx-auto sm:w-full sm:max-w-md text-center">
-    <%= render "shared/title/white" %>
+    <%= link_to root_path do %>
+        <%= render "shared/title/white" %>
+    <% end %>
     <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-blue-900 capitalize"><%= yield :form_title %></h2>
 </div>
 <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
