--- a/app/javascript/css/components/_forms.scss
+++ b/app/javascript/css/components/_forms.scss
@@ -1,5 +1,5 @@
 .input {
-    @apply appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md transition duration-150 ease-in-out;
+    @apply appearance-none block w-full px-3 py-2 border border-gray-300 transition duration-150 ease-in-out;
 }
 .input:focus {
     @apply outline-none shadow-outline-blue border-blue-300;
