--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
       <%= render "shared/header/header" %>
       <main class="-mt-32">
         <div class="max-w-7xl mx-auto pb-12 px-4 sm:px-6 lg:px-8">
-          <div class="bg-white rounded-lg shadow px-5 py-6 sm:px-6">
+          <div class="bg-white px-5 py-6 sm:px-6">
               <%= yield %>
               <%= render "shared/misc/debug" if Rails.env == 'development' %>
           </div>
