--- a/app/views/shared/navigation/_menu_links_desktop.html.erb
+++ b/app/views/shared/navigation/_menu_links_desktop.html.erb
@@ -1,7 +1,7 @@
 <div class="hidden md:block">
     <div class="ml-10 flex items-baseline">
-        <%= link_to "Notes", notes_path, class: "px-3 py-2 rounded-md text-sm font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700" %>
-        <%= link_to "Tasks", tasks_path, class: "ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 " %>
-        <%= link_to "Reminders", reminders_path, class: "ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 " %>
+        <%= link_to "Notes", notes_path, class: "px-3 py-2 text-sm font-medium text-white border border-white focus:outline-none focus:text-white focus:bg-gray-900" %>
+        <%= link_to "Tasks", tasks_path, class: "ml-4 px-3 py-2 text-sm font-medium text-white border border-transparent hover:text-black hover:bg-white focus:outline-none focus:text-black focus:bg-white focus:border-white " %>
+        <%= link_to "Reminders", reminders_path, class: "ml-4 px-3 py-2 text-sm font-medium text-white border border-transparent hover:text-black hover:bg-white focus:outline-none focus:text-black focus:bg-white focus:border-white " %>
     </div>
 </div>
