--- a/app/views/shared/navigation/_navigation.html.erb
+++ b/app/views/shared/navigation/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav x-data="{ open: false }" @keydown.window.escape="open = false" class="bg-gray-800">
+<nav x-data="{ open: false }" @keydown.window.escape="open = false" class="bg-black">
   <%= render "shared/navigation/desktop" %>
   <%= render "shared/navigation/mobile" %>
 </nav>
