--- a/app/views/shared/navigation/_profile_links_mobile.html.erb
+++ b/app/views/shared/navigation/_profile_links_mobile.html.erb
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="mt-3 px-2" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-        <%= link_to "Your Profile", edit_user_registration_path, class: "block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700", role: :menuitem %>
-        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700", role: :menuitem %>
+        <%= link_to "Your Profile", edit_user_registration_path, class: "block px-3 py-2 text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700", role: :menuitem %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "mt-1 block px-3 py-2 text-base font-medium text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700", role: :menuitem %>
     </div>
 </div>
