--- a/app/views/shared/header/_title.html.erb
+++ b/app/views/shared/header/_title.html.erb
@@ -1,7 +1,7 @@
 <header class="py-10">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <h1 class="text-3xl leading-9 font-bold text-white">
-            Dashboard
+            <%= yield :title %>
         </h1>
     </div>
 </header>
