--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -17,7 +17,16 @@
 <% else %>
     <%= tag.tr do %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200" do %>
-            <span class="text-sm leading-5 font-medium text-gray-900"><%= note.try(:reify) ? note.reify.title : note.title %></span>
+            <div class="flex">
+                <span class="text-sm leading-5 font-medium text-gray-900 mr-2"><%= note.try(:reify) ? note.reify.title : note.title %></span>
+                <% if note.try(:reify) %>
+                    <%= render partial: "shared/misc/badge", locals: { status: "Public" } if note.reify.public %>
+                    <%= render partial: "shared/misc/badge", locals: { status: "Pinned" } if note.reify.pinned %>
+                <% else %>
+                    <%= render partial: "shared/misc/badge", locals: { status: "Public" } if note.public %>
+                    <%= render partial: "shared/misc/badge", locals: { status: "Pinned" } if note.pinned %>
+                <% end %>            
+            </div>
             <div class="text-sm leading-5 text-gray-500">
                 <% if params[:action] == "index" %>
                     <%= link_to 'Edit', edit_note_path(note), class: "text-blue-500 hover:text-blue-600 focus:outline-none focus:text-blue-900" %>
@@ -34,18 +43,6 @@
         <%# TODO Format preview text. %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
             <%= note.try(:reify) ? note.reify.body.truncate_words(10) : note.body.truncate_words(10) %>
-        <% end %>
-        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
-            <%= note.try(:reify) ? note.reify.tag_list : note.tag_list %>   
-        <% end %>
-        <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
-            <% if note.try(:reify) %>
-                <%= render partial: "shared/misc/badge", locals: { status: "Public" } if note.reify.public %>
-                <%= render partial: "shared/misc/badge", locals: { status: "Pinned" } if note.reify.pinned %>
-            <% else %>
-                <%= render partial: "shared/misc/badge", locals: { status: "Public" } if note.public %>
-                <%= render partial: "shared/misc/badge", locals: { status: "Pinned" } if note.pinned %>
-            <% end %>
         <% end %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
             <%= note.try(:reify) ? "#{time_ago_in_words(note.reify.updated_at)} ago" : "#{time_ago_in_words(note.updated_at)} ago" %>
