--- a/app/views/shared/misc/_badge.html.erb
+++ b/app/views/shared/misc/_badge.html.erb
@@ -1,1 +1,1 @@
-<span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800"><%= status %></span>
+<span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800 mr-2"><%= status %></span>
