--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -40,9 +40,12 @@
                 <% end %>
             </div>
         <% end %>
-        <%# TODO Format preview text. %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
-            <%= note.try(:reify) ? note.reify.body.truncate_words(10) : note.body.truncate_words(10) %>
+            <% if note.try(:reify) %>
+                <%= markdown note.reify.body.truncate_words(10) %>
+            <% else %>
+                <%= markdown note.body.truncate_words(10) %>
+            <% end %>
         <% end %>
         <%= tag.td class: "px-6 py-4 whitespace-no-wrap border-b border-blue-200 text-sm leading-5 text-gray-500" do %>
             <%= note.try(:reify) ? "#{time_ago_in_words(note.reify.updated_at)} ago" : "#{time_ago_in_words(note.updated_at)} ago" %>
